--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Kiko Now
+name: 순원 깃헙
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description:  would like hater one for the chuck wonder like station 동네사람들
 
 #
 # Flags below are optional
